objects/vlocity_ins__InsuranceClaim__c.object
<CustomObject>
    <description>A claim is a formal request made by an insured party to an insurance company for coverage or compensation for a covered loss or policy event. Claims may cover comprehensive medical exams, automotive repairs or even death benefits.</description>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimStatus__c</fullName>
        <label>Claim Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed W/O Pay</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimTotalAmount__c</fullName>
        <formula>vlocity_ins__SumAcceptedLossAmount__c + MAX(vlocity_ins__SumPendingLossAmount__c,  vlocity_ins__SumCoverageReserveAmount__c)  + vlocity_ins__SumExpenseAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DaysSinceStatusUpdated__c</fullName>
        <formula>TODAY() - vlocity_ins__StatusDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Status Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsChargeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chargeable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsSubrogatable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subrogatable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LiabilityPercentage__c</fullName>
        <label>Liability %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LossCause__c</fullName>
        <label>Loss Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Glass Claim</fullName>
                </value>
                <value>
                    <fullName>Auto Accident</fullName>
                </value>
                <value>
                    <fullName>Auto Theft</fullName>
                </value>
                <value>
                    <fullName>Windstorm</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Property Theft</fullName>
                </value>
                <value>
                    <fullName>Flooding</fullName>
                </value>
                <value>
                    <fullName>3rd Party Injury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__LossDate__c</fullName>
        <label>Loss Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LossType__c</fullName>
        <label>Loss Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__OccurrenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Occurrence</label>
        <referenceTo>vlocity_ins__Occurrence__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PotentialFraudScore__c</fullName>
        <label>Potential Fraud Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryOwnerName__c</fullName>
        <formula>vlocity_ins__PrimaryOwnerPartyId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryOwnerPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary claim owner (could be company, or contact )</description>
        <label>Claim Owner</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>ClaimOwner</relationshipLabel>
        <relationshipName>ClaimOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPayeeAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Payee Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>ClaimsPrimaryPayee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPayeeContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Payee Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>ClaimsPayeeContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPolicyAssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Policy</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>PrimaryClaims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED</description>
        <label>Primary Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPolicyLineOfBusiness__c</fullName>
        <formula>vlocity_ins__PrimaryPolicyId__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPolicyNumber__c</fullName>
        <formula>vlocity_ins__PrimaryPolicyId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryPolicyType__c</fullName>
        <formula>TEXT(vlocity_ins__PrimaryPolicyId__r.vlocity_ins__PolicyType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RemainingReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <formula>vlocity_ins__SumInvolvedPropertyReserveAmount__c + vlocity_ins__SumInvolvedPartyReserveAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Reserve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReportedDate__c</fullName>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RevisedDescription__c</fullName>
        <label>Revised Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SalvagePotential__c</fullName>
        <label>Salvage Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claim</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatusDate__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StatusImage__c</fullName>
        <formula>IF( TEXT(vlocity_ins__ClaimStatus__c) ==&apos;Open&apos;, &apos;open&apos;, IF(TEXT(vlocity_ins__ClaimStatus__c)==&apos;Reopened&apos;, &apos;open&apos;, IF(TEXT(vlocity_ins__ClaimStatus__c)==&apos;Closed&apos;, &apos;closed&apos;, IF(TEXT(vlocity_ins__ClaimStatus__c)==&apos;Closed W/O Pay&apos;, &apos;closed&apos;, &apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubrogationScore__c</fullName>
        <label>Subrogation Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumAcceptedLossAmount__c</fullName>
        <label>Accepted Loss Amount</label>
        <summarizedField>vlocity_ins__ClaimLineItem__c.vlocity_ins__AdjustedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__ClaimLineItem__c.vlocity_ins__Status__c</field>
            <operation>contains</operation>
            <value>Paid, Closed W/O Pay</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__ClaimLineItem__c.vlocity_ins__Type__c</field>
            <operation>equals</operation>
            <value>Loss</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__ClaimLineItem__c.vlocity_ins__ClaimId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumCoverageReserveAmount__c</fullName>
        <label>Remaining Reserve</label>
        <summarizedField>vlocity_ins__ClaimCoverage__c.vlocity_ins__ReserveAmount__c</summarizedField>
        <summaryForeignKey>vlocity_ins__ClaimCoverage__c.vlocity_ins__ClaimId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumExpenseAmount__c</fullName>
        <label>Expense Amount</label>
        <summarizedField>vlocity_ins__ClaimLineItem__c.vlocity_ins__ExpenseAmount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__ClaimLineItem__c.vlocity_ins__Type__c</field>
            <operation>equals</operation>
            <value>Expense</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__ClaimLineItem__c.vlocity_ins__ClaimId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumInvolvedPartyReserveAmount__c</fullName>
        <label>Involved Party Remaining Reserve</label>
        <summarizedField>vlocity_ins__InsuranceClaimInvolvedInjury__c.vlocity_ins__RemainingReserveAmount__c</summarizedField>
        <summaryForeignKey>vlocity_ins__InsuranceClaimInvolvedInjury__c.vlocity_ins__ClaimId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumInvolvedPropertyReserveAmount__c</fullName>
        <label>Involved Property Remaining Reserve</label>
        <summarizedField>vlocity_ins__InsuranceClaimInvolvedProperty__c.vlocity_ins__RemainingReserveAmount__c</summarizedField>
        <summaryForeignKey>vlocity_ins__InsuranceClaimInvolvedProperty__c.vlocity_ins__ClaimId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumPaidAmount__c</fullName>
        <label>Sum Paid Amount</label>
        <summarizedField>vlocity_ins__ClaimLineItem__c.vlocity_ins__PaidAmount__c</summarizedField>
        <summaryForeignKey>vlocity_ins__ClaimLineItem__c.vlocity_ins__ClaimId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumPendingLossAmount__c</fullName>
        <label>Pending Loss Amount</label>
        <summarizedField>vlocity_ins__ClaimLineItem__c.vlocity_ins__AdjustedAmount__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__ClaimLineItem__c.vlocity_ins__Type__c</field>
            <operation>equals</operation>
            <value>Loss</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__ClaimLineItem__c.vlocity_ins__Status__c</field>
            <operation>notEqual</operation>
            <value>Paid, Closed W/O Pay</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__ClaimLineItem__c.vlocity_ins__ClaimId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumReserveAmount__c</fullName>
        <label>Sum Reserve Amount</label>
        <summarizedField>vlocity_ins__ClaimLineItem__c.vlocity_ins__ReserveAmount__c</summarizedField>
        <summaryForeignKey>vlocity_ins__ClaimLineItem__c.vlocity_ins__ClaimId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalIncurred__c</fullName>
        <label>Total Incurred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalOutstanding__c</fullName>
        <label>Total Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPaid__c</fullName>
        <label>Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__ClaimStatus__c</columns>
        <columns>vlocity_ins__PrimaryOwnerPartyId__c</columns>
        <columns>vlocity_ins__PrimaryPolicyId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Claim Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>